# DGMM_2021

./: README.md
Results/: readme.md
Results/ball_r5/: objetX.txt  objetY1.txt
Results/ellipse_10-6/: objetX.txt  objetY1.txt  objetY2.txt
Results/experiments/: dgmm_objetGaussian.txt  dgmm_objetY1.txt  dgmm_objetY2.txt  disk11_5_moved_Y1.txt  ellipse10-6_objetY1.txt  ellipse10-6_objetY2.txt  ellipse10-6_rot24-7-25_Y2.txt  ellipse10-6_rot3-4-5_Y2.txt  readme.md  rings_objetX.txt  rings_objetY1.txt  rings_objetY2.txt  smile_objetX.txt  smile_objetY1.txt  smile_objetY2.txt
Results/flower_r7-3_k5/: objetX.txt  objetY1.txt  objetY2.txt
Results/pentagon_r10/: objetX.txt  objetY1.txt  objetY2.txt
Results/rationalDigitizations/: disk11_5.txt  disk11_5_moved_Y2.txt  disk5_moved_Y2.txt  ellipse10-6.txt  ellipse10-6_moved_Y1.txt  ellipse10-6_moved_Y2.txt  ellipse10-6_rot24-7-25_Y1.txt  ellipse10-6_rot3-4-5_Y1.txt  readme.md
Results/triangle_r10/: objetX.txt  objetY1.txt  objetY2.txt
Samples/: ball.pgm  ball_r8.pgm  ellipse.pgm  ellipse3-4-15.pgm  ellipse3-4-15_rot3-4-5.pgm  ellipse_10-6.pgm  flower.pgm  flower_r7-3_k5.pgm  nonagon.pgm  pentagon.pgm  pentagon_r10.pgm  square.pgm  square_w8.pgm  triangle.pgm  triangle_r10.pgm
Samples/experiments/: disk11_5.pgm  rings.pgm  smile.pgm
Samples/rationalDigitizations/: disk11_5_moved.pgm  disk5_moved.pgm  ellipse10-6_rot24-7-25.pgm  ellipse10-6_rot3-4-5.pgm
src/: CMakeLists.txt  digitizeRationalDisk.cpp  digitizeRationalEllipse.cpp  readme.md
